# sparklibtest

./: README.md  pyproject.toml  pytest.ini
sparklibtest/: cbor_parquet_schema.py  fn.py  parquet_base_types.py  parquet_microformats.py  util.py  vocab_dictionary.py
tests/: test_sparklibtest.py
tests/test_parquet/: test_generate_parquet.py
