[tool.poetry]
name = "sparklibtest"
version = "0.1.0"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.0"
pendulum = "^2.1.2"
pyarrow = "^8.0.0"
PyMonad = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
